--- a/src/css/ContactUs.scss
+++ b/src/css/ContactUs.scss
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 1434px;
 
     .left-main {
       flex: 0.55;
