--- a/src/css/ContactUs.scss
+++ b/src/css/ContactUs.scss
@@ -108,6 +108,19 @@
               cursor: pointer;
               opacity: 0.5;
             }
+
+            .copied-message {
+              position: absolute;
+              top: -25px;
+              left: 50%;
+              transform: translateX(-50%);
+              background: black;
+              color: white;
+              padding: 5px 10px;
+              border-radius: 5px;
+              font-size: 12px;
+              z-index: 10;
+            }
           }
         }
       }
