--- a/src/css/JoinWaitlist.css
+++ b/src/css/JoinWaitlist.css
@@ -1,3 +1,14 @@
+.join-waitlist {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  padding-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+}
 .join-waitlist .ai_2 {
   position: absolute;
   bottom: 0;
@@ -6,19 +17,31 @@
   display: none;
 }
 .join-waitlist .container {
-  width: 70%;
+  width: 1434px;
   overflow-y: scroll;
   z-index: 1;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  flex: 1;
+  padding-top: 80px;
 }
 .join-waitlist .container h1 {
   text-align: center;
   font-family: Raleway;
-  font-size: 100px;
+  font-size: 90px;
   font-style: normal;
   font-weight: 800;
   line-height: 70px;
   letter-spacing: -6px;
+  opacity: 0.5;
+  background: var(--Radiant-Vertical, linear-gradient(270deg, #914ceb 0%, #cd5c5c 20%, #ff8c00 40%, #eee8aa 60%, #2e8b57 80%, #4682b4 100%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .join-waitlist .container p {
   padding: 40px 0;
@@ -26,12 +49,12 @@
   color: var(--color-grey-Deepwhite, #f6f6f6);
   text-align: center;
   font-family: Raleway;
-  font-size: 18px;
+  font-size: 23px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   letter-spacing: -0.6px;
-  width: 80%;
+  width: 800px;
 }
 .join-waitlist .container .features {
   display: flex;
@@ -50,7 +73,7 @@
   padding: 0;
   color: #f6f6f6;
   font-family: Raleway;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
