--- a/src/css/ContactUs.css
+++ b/src/css/ContactUs.css
@@ -104,6 +104,7 @@
   display: flex;
   height: 100%;
   padding: 30px;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
   gap: 20px;
