--- a/src/css/ContactUs.scss
+++ b/src/css/ContactUs.scss
@@ -131,6 +131,7 @@
       display: flex;
       height: 100%;
       padding: 30px;
+      justify-content: space-between;
       flex-direction: column;
       align-items: center;
       gap: 20px;
