--- a/src/css/JoinWaitlist.scss
+++ b/src/css/JoinWaitlist.scss
@@ -9,6 +9,70 @@
   position: relative;
   overflow: hidden;
 
+  .modal {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 40px;
+
+    .modal-container {
+      display: inline-flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      border-radius: 20px;
+      background: #000;
+      /* Outer shadow */
+      box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+      backdrop-filter: blur(20px);
+
+      .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 40px;
+      }
+
+      h2 {
+        color: var(--color-grey-Deepwhite, #f6f6f6);
+        text-align: center;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+      }
+
+      p {
+        padding-top: 10px;
+        color: var(--color-grey-Deepwhite, #f6f6f6);
+        text-align: center;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+      }
+
+      .txt {
+        padding-top: 10px;
+        color: var(--color-grey-Deepwhite, #f6f6f6);
+        text-align: center;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+    }
+  }
+
   .ai_2 {
     position: absolute;
     bottom: 0;
