--- a/src/css/JoinWaitlist.scss
+++ b/src/css/JoinWaitlist.scss
@@ -183,28 +183,105 @@
         z-index: 1;
       }
 
-      input {
-        width: 500px;
-        padding: 20px 30px;
-        border-radius: 20px;
-        border: 1px solid var(--color-grey-Grey, #cdcdcd);
-        background: var(--color-grey-Altblack, #323232);
-        font-family: inherit;
-        font-family: Raleway;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        color: var(--color-grey-Deepwhite, #f6f6f6);
+      form {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
-        &::placeholder {
-          color: var(--color-grey-Ash-Stroke, #8a8a8a);
+        .text-field {
+          display: flex;
+          height: 70px;
+          padding: 5px;
+          align-items: flex-start;
+          gap: 10px;
+          border-radius: 25px;
+          background: var(
+            --Ratotated-Radiant,
+            linear-gradient(
+              270deg,
+              rgba(151, 71, 255, 0.1) 0%,
+              rgba(205, 92, 92, 0.1) 20%,
+              rgba(255, 140, 0, 0.1) 40%,
+              rgba(238, 232, 170, 0.1) 60%,
+              rgba(46, 139, 87, 0.1) 80%,
+              rgba(70, 130, 180, 0.1) 100%
+            )
+          );
+          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+          backdrop-filter: blur(15px);
+          margin-right: 5px;
+
+          input {
+            width: 500px;
+            padding: 20px 30px;
+            border-radius: 20px;
+            border: 1px solid var(--color-grey-Grey, #cdcdcd);
+            background: var(--color-grey-Altblack, #323232);
+            font-family: inherit;
+            font-family: Raleway;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            color: var(--color-grey-Deepwhite, #f6f6f6);
+
+            &::placeholder {
+              color: var(--color-grey-Ash-Stroke, #8a8a8a);
+            }
+          }
         }
 
-        &:hover {
-          border-radius: 20px;
-          background: var(--color-grey-Black, #1c1c1c);
-          box-shadow: 0px 0px 20px 0px #eee8aa;
+        .btn {
+          display: flex;
+          height: 70px;
+          padding: 5px;
+          align-items: flex-start;
+          gap: 10px;
+          // width: 132px;
+          border-radius: 25px;
+          background: var(
+            --Ratotated-Radiant,
+            linear-gradient(
+              270deg,
+              rgba(151, 71, 255, 0.1) 0%,
+              rgba(205, 92, 92, 0.1) 20%,
+              rgba(255, 140, 0, 0.1) 40%,
+              rgba(238, 232, 170, 0.1) 60%,
+              rgba(46, 139, 87, 0.1) 80%,
+              rgba(70, 130, 180, 0.1) 100%
+            )
+          );
+          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+          backdrop-filter: blur(15px);
+
+          button {
+            background: none;
+            outline: none;
+            border: none;
+            display: flex;
+            padding: 10px 30px;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            align-self: stretch;
+            border-radius: 20px;
+            background: var(--color-grey-Black, #1c1c1c);
+            color: var(--color-grey-Grey-Line, #ececec);
+            text-align: center;
+            font-family: inherit;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            cursor: pointer;
+            transition: 0.2s all ease-in-out;
+
+            &:hover {
+              border-radius: 20px;
+              background: var(--color-grey-Black, #1c1c1c);
+              box-shadow: 0px 0px 20px 0px #eee8aa;
+            }
+          }
         }
       }
 
