--- a/src/css/ContactUs.css
+++ b/src/css/ContactUs.css
@@ -194,6 +194,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 12px;
+  position: relative;
 }
 .contact-us .main .right-main .form .label label {
   color: var(--color-grey-Deepwhite, #f6f6f6);
@@ -246,6 +247,48 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+.contact-us .main .right-main .form .label .select-modal {
+  width: 100%;
+  padding: 5px;
+  border-radius: 25px;
+  background: var(--Rotated-Dark-Radiant, linear-gradient(0deg, rgba(44, 44, 44, 0.9) 0%, rgba(44, 44, 44, 0.9) 100%), linear-gradient(270deg, rgba(151, 71, 255, 0.6) 0%, rgba(205, 92, 92, 0.6) 20%, rgba(255, 140, 0, 0.6) 40%, rgba(238, 232, 170, 0.6) 60%, rgba(46, 139, 87, 0.6) 80%, rgba(70, 130, 180, 0.6) 100%));
+  /* Outer shadow */
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  position: absolute;
+  top: 30%;
+  z-index: 10000000;
+}
+.contact-us .main .right-main .form .label .select-modal .modal-item {
+  align-self: stretch;
+  height: 60px;
+  padding: 10px 30px;
+  border-radius: 20px;
+  border: 1px rgba(246, 246, 246, 0.02) solid;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  display: flex;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.contact-us .main .right-main .form .label .select-modal .modal-item:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.contact-us .main .right-main .form .label .select-modal .modal-item div {
+  text-align: center;
+  color: #f6f6f6;
+  font-size: 16px;
+  font-family: Raleway;
+  font-weight: 400;
+  word-wrap: break-word;
 }
 .contact-us .main .right-main .form .label textarea {
   border-radius: 20px;
