--- a/src/css/ContactUs.scss
+++ b/src/css/ContactUs.scss
@@ -230,6 +230,7 @@
           display: flex;
           flex-direction: column;
           margin-bottom: 12px;
+          position: relative;
 
           label {
             color: var(--color-grey-Deepwhite, #f6f6f6);
@@ -282,6 +283,68 @@
               font-style: normal;
               font-weight: 500;
               line-height: normal;
+            }
+          }
+
+          .select-modal {
+            width: 100%;
+            padding: 5px;
+            border-radius: 25px;
+            background: var(
+              --Rotated-Dark-Radiant,
+              linear-gradient(
+                0deg,
+                rgba(44, 44, 44, 0.9) 0%,
+                rgba(44, 44, 44, 0.9) 100%
+              ),
+              linear-gradient(
+                270deg,
+                rgba(151, 71, 255, 0.6) 0%,
+                rgba(205, 92, 92, 0.6) 20%,
+                rgba(255, 140, 0, 0.6) 40%,
+                rgba(238, 232, 170, 0.6) 60%,
+                rgba(46, 139, 87, 0.6) 80%,
+                rgba(70, 130, 180, 0.6) 100%
+              )
+            );
+
+            /* Outer shadow */
+            box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(20px);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+            position: absolute;
+            top: 30%;
+            z-index: 10000000;
+
+            .modal-item {
+              align-self: stretch;
+              height: 60px;
+              padding: 10px 30px;
+              border-radius: 20px;
+              border: 1px rgba(245.71, 245.71, 245.71, 0.02) solid;
+              justify-content: center;
+              align-items: center;
+              gap: 10px;
+              display: flex;
+              cursor: pointer;
+              transition: all 0.3s ease;
+
+              &:hover {
+                background-color: rgba(255, 255, 255, 0.1);
+              }
+
+              div {
+                text-align: center;
+                color: #f6f6f6;
+                font-size: 16px;
+                font-family: Raleway;
+                font-weight: 400;
+                word-wrap: break-word;
+              }
             }
           }
 
