--- a/src/css/ActionNav.css
+++ b/src/css/ActionNav.css
@@ -71,4 +71,37 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+@media screen and (max-width: 768px) {
+  .action-navs {
+    display: inline-flex;
+    padding: 4px;
+    align-items: flex-start;
+    gap: 4px;
+    border-radius: 15px;
+    background: var(--Ratotated-Radiant, linear-gradient(270deg, rgba(151, 71, 255, 0.1) 0%, rgba(205, 92, 92, 0.1) 20%, rgba(255, 140, 0, 0.1) 40%, rgba(238, 232, 170, 0.1) 60%, rgba(46, 139, 87, 0.1) 80%, rgba(70, 130, 180, 0.1) 100%));
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  .action-navs .nav {
+    display: flex;
+    height: 45px;
+    padding: 10px 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 10px;
+    border: 1px solid var(--color-grey-Ash-Stroke, #8a8a8a);
+    color: var(--color-grey-Deepwhite, #f6f6f6);
+    text-align: center;
+    font-family: Raleway;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  .action-navs .nav img {
+    height: 10px;
+  }
 }/*# sourceMappingURL=ActionNav.css.map */
