--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -66,4 +66,98 @@
 }
 .home .container .imgs img.desktop {
   bottom: -800px;
+}
+.home .container .imgs-repo {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .home .ai {
+    position: absolute;
+    left: -50%;
+  }
+  .home .blured-effect {
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 490px;
+    flex-shrink: 0;
+    background: linear-gradient(0deg, #1c1c1c 64.52%, rgba(28, 28, 28, 0) 91.42%);
+    pointer-events: none;
+  }
+  .home .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+    flex: 1;
+    padding-top: 150px;
+  }
+  .home .container p {
+    color: var(--color-grey-Deepwhite, #f6f6f6);
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    width: 276px;
+    margin-bottom: 30px;
+    padding: 0;
+  }
+  .home .container h1 {
+    display: flex;
+    width: 375px;
+    height: 127px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 90px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 60px; /* 60% */
+    letter-spacing: -5px;
+  }
+  .home .container .imgs {
+    display: none;
+    position: absolute;
+    bottom: -30px;
+  }
+  .home .container .imgs img {
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%) scale(0.6);
+  }
+  .home .container .imgs img.desktop {
+    bottom: -800px;
+  }
+  .home .container .imgs-repo {
+    display: block;
+    position: absolute;
+    bottom: -30px;
+  }
+  .home .container .imgs-repo img {
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+@media (min-width: 992px) and (max-width: 1024px) {
+  .home .container .imgs {
+    position: absolute;
+    bottom: -30px;
+  }
+  .home .container .imgs img {
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%) scale(0.4);
+  }
+  .home .container .imgs img.desktop {
+    bottom: -800px;
+  }
 }/*# sourceMappingURL=Home.css.map */
