--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -88,5 +88,123 @@
         }
       }
     }
+
+    .imgs-repo {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .ai {
+      position: absolute;
+      left: -50%;
+    }
+
+    & {
+      .blured-effect {
+        position: absolute;
+        bottom: 0px;
+        left: 0;
+        width: 100%;
+        height: 490px;
+        flex-shrink: 0;
+        background: linear-gradient(
+          0deg,
+          #1c1c1c 64.52%,
+          rgba(28, 28, 28, 0) 91.42%
+        );
+        pointer-events: none;
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        position: relative;
+        flex: 1;
+        padding-top: 150px;
+
+        p {
+          color: var(--color-grey-Deepwhite, #f6f6f6);
+          text-align: center;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          width: 276px;
+          margin-bottom: 30px;
+          padding: 0;
+        }
+
+        h1 {
+          display: flex;
+          width: 375px;
+          height: 127px;
+          flex-direction: column;
+          justify-content: center;
+          flex-shrink: 0;
+          text-align: center;
+          font-family: Raleway;
+          font-size: 90px;
+          font-style: normal;
+          font-weight: 800;
+          line-height: 60px; /* 60% */
+          letter-spacing: -5px;
+        }
+
+        .imgs {
+          display: none;
+          position: absolute;
+          bottom: -30px;
+
+          img {
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%) scale(0.6);
+
+            &.desktop {
+              bottom: -800px;
+            }
+          }
+        }
+
+        .imgs-repo {
+          display: block;
+          position: absolute;
+          bottom: -30px;
+
+          img {
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+          }
+        }
+      }
+    }
+  }
+
+  @media (min-width: 992px) and (max-width: 1024px) {
+    & {
+      .container {
+        .imgs {
+          position: absolute;
+          bottom: -30px;
+
+          img {
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%) scale(0.4);
+
+            &.desktop {
+              bottom: -800px;
+            }
+          }
+        }
+      }
+    }
   }
 }
