--- a/src/css/TryRequestAi.scss
+++ b/src/css/TryRequestAi.scss
@@ -6,13 +6,16 @@
   }
 
   .chat-section {
+    overflow-y: scroll;
     flex: 1;
-    display: flex;
-    align-items: center;
+    width: 100%;
     justify-content: center;
+    display: flex;
+    padding-top: 80px;
 
     .chat-container {
       display: flex;
+      margin-bottom: 50px;
       width: 600px;
       height: 556px;
       padding: 0 10px;
@@ -157,6 +160,341 @@
           align-items: center;
           border-radius: 20px;
           background: var(--color-grey-Black, #1c1c1c);
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    & {
+      .ai_3 {
+        position: absolute;
+        top: -65%;
+        transform: scale(0.9);
+      }
+
+      .chat-section {
+        overflow-y: scroll;
+        flex: 1;
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        padding: 0 15px;
+        padding-top: 80px;
+
+        .chat-container {
+          display: flex;
+          margin-bottom: 50px;
+          width: 100%;
+          max-width: 400px;
+          height: 600px;
+          padding: 0 10px;
+          flex-direction: column;
+          justify-content: space-between;
+          flex-shrink: 0;
+          border-radius: 25px;
+          border: 1px solid var(--color-grey-Altblack, #323232);
+          background: var(
+            --color-grey-Transparent-deepwhite,
+            rgba(246, 246, 246, 0.02)
+          );
+          backdrop-filter: blur(25px);
+          position: relative;
+
+          .fixed-title {
+            width: 100%;
+            height: 100px;
+
+            h1 {
+              padding-top: 30px;
+              text-align: center;
+              font-family: Raleway;
+              font-size: 25px;
+              font-style: normal;
+              font-weight: 800;
+              line-height: normal;
+              letter-spacing: -1.25px;
+              opacity: 0.5;
+              z-index: 10;
+              background: var(
+                --Radiant-Vertical,
+                linear-gradient(
+                  270deg,
+                  #914ceb 0%,
+                  #cd5c5c 20%,
+                  #ff8c00 40%,
+                  #eee8aa 60%,
+                  #2e8b57 80%,
+                  #4682b4 100%
+                )
+              );
+              background-clip: text;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+            }
+          }
+
+          .chats {
+            padding: 0 15px;
+            display: flex;
+            flex-direction: column;
+            overflow-y: scroll;
+
+            .chatbox {
+              align-self: flex-start;
+              margin-bottom: 10px;
+              display: flex;
+              width: 85%;
+              padding: 20px 15px 20px 10px;
+              align-items: flex-start;
+              border-radius: 0px 30px 30px 30px;
+              background: linear-gradient(
+                90deg,
+                rgba(151, 71, 255, 0.1) 0%,
+                rgba(205, 92, 92, 0.1) 20%,
+                rgba(255, 140, 0, 0.1) 40%,
+                rgba(238, 232, 170, 0.1) 60%,
+                rgba(46, 139, 87, 0.1) 80%,
+                rgba(70, 130, 180, 0.1) 100%
+              );
+              backdrop-filter: blur(25px);
+
+              p {
+                color: var(--color-grey-Deepwhite, #f6f6f6);
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+                margin-left: 10px;
+              }
+
+              &.user {
+                align-self: flex-end;
+                border-radius: 30px 0px 30px 30px;
+                background: var(--color-grey-Altblack, #323232);
+                backdrop-filter: blur(25px);
+              }
+            }
+          }
+
+          .input {
+            width: 100%;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            display: flex;
+            padding: 5px 5px 5px 20px;
+            justify-content: space-between;
+            align-items: center;
+            align-self: stretch;
+            border-radius: 15px;
+            background: var(
+              --Ratotated-Radiant,
+              linear-gradient(
+                270deg,
+                rgba(151, 71, 255, 0.1) 0%,
+                rgba(205, 92, 92, 0.1) 20%,
+                rgba(255, 140, 0, 0.1) 40%,
+                rgba(238, 232, 170, 0.1) 60%,
+                rgba(46, 139, 87, 0.1) 80%,
+                rgba(70, 130, 180, 0.1) 100%
+              )
+            );
+            backdrop-filter: blur(20px);
+            margin-bottom: 10px;
+
+            input {
+              font-family: inherit;
+              flex: 1;
+              background: none;
+              outline: none;
+              border: none;
+              font-family: Raleway;
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: normal;
+              color: var(--color-grey-Deepwhite, #f6f6f6);
+
+              &::placeholder {
+                color: var(--color-grey-Ash-Stroke, #8a8a8a);
+              }
+            }
+
+            span {
+              cursor: pointer;
+              display: flex;
+              width: 40px;
+              height: 100%;
+              justify-content: center;
+              align-items: center;
+              border-radius: 10px;
+              background: var(--color-grey-Black, #1c1c1c);
+
+              img {
+                width: 20px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  @media (min-width: 992px) and (max-width: 1024px) {
+    & {
+      .chat-section {
+        padding-top: 50px;
+
+        .chat-container {
+          display: flex;
+          margin-bottom: 50px;
+          width: 500px;
+          height: 456px;
+          padding: 0 10px;
+          flex-direction: column;
+          justify-content: space-between;
+          flex-shrink: 0;
+          border-radius: 40px;
+          border: 1px solid var(--color-grey-Altblack, #323232);
+          background: var(
+            --color-grey-Transparent-deepwhite,
+            rgba(246, 246, 246, 0.02)
+          );
+          backdrop-filter: blur(25px);
+          position: relative;
+
+          .fixed-title {
+            width: 100%;
+            height: 150px;
+
+            h1 {
+              padding-top: 50px;
+              text-align: center;
+              font-family: Raleway;
+              font-size: 35px;
+              font-style: normal;
+              font-weight: 800;
+              line-height: normal;
+              letter-spacing: -2px;
+              opacity: 0.5;
+              z-index: 10;
+              background: var(
+                --Radiant-Vertical,
+                linear-gradient(
+                  270deg,
+                  #914ceb 0%,
+                  #cd5c5c 20%,
+                  #ff8c00 40%,
+                  #eee8aa 60%,
+                  #2e8b57 80%,
+                  #4682b4 100%
+                )
+              );
+              background-clip: text;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+            }
+          }
+
+          .chats {
+            padding: 0 15px;
+            display: flex;
+            flex-direction: column;
+            overflow-y: scroll;
+
+            .chatbox {
+              align-self: flex-start;
+              margin-bottom: 10px;
+              display: flex;
+              width: 80%;
+              padding: 20px 15px 20px var(--radius-lg, 10px);
+              align-items: flex-start;
+              border-radius: 0px 30px 30px 30px;
+              background: linear-gradient(
+                90deg,
+                rgba(151, 71, 255, 0.1) 0%,
+                rgba(205, 92, 92, 0.1) 20%,
+                rgba(255, 140, 0, 0.1) 40%,
+                rgba(238, 232, 170, 0.1) 60%,
+                rgba(46, 139, 87, 0.1) 80%,
+                rgba(70, 130, 180, 0.1) 100%
+              );
+              backdrop-filter: blur(25px);
+
+              p {
+                color: var(--color-grey-Deepwhite, #f6f6f6);
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+                margin-left: 10px;
+              }
+
+              &.user {
+                align-self: flex-end;
+                border-radius: 30px 0px 30px 30px;
+                background: var(--color-grey-Altblack, #323232);
+                backdrop-filter: blur(25px);
+              }
+            }
+          }
+
+          .input {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            display: flex;
+            padding: 10px;
+            padding-left: 30px;
+            justify-content: space-between;
+            align-items: center;
+            align-self: stretch;
+            border-radius: 30px;
+            background: var(
+              --Ratotated-Radiant,
+              linear-gradient(
+                270deg,
+                rgba(151, 71, 255, 0.1) 0%,
+                rgba(205, 92, 92, 0.1) 20%,
+                rgba(255, 140, 0, 0.1) 40%,
+                rgba(238, 232, 170, 0.1) 60%,
+                rgba(46, 139, 87, 0.1) 80%,
+                rgba(70, 130, 180, 0.1) 100%
+              )
+            );
+            backdrop-filter: blur(20px);
+            margin-bottom: 10px;
+
+            input {
+              font-family: inherit;
+              flex: 1;
+              background: none;
+              outline: none;
+              border: none;
+              font-family: Raleway;
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: normal;
+              color: var(--color-grey-Deepwhite, #f6f6f6);
+
+              &::placeholder {
+                color: var(--color-grey-Ash-Stroke, #8a8a8a);
+              }
+            }
+
+            span {
+              cursor: pointer;
+              display: flex;
+              width: 50px;
+              height: 50px;
+              justify-content: center;
+              align-items: center;
+              border-radius: 20px;
+              background: var(--color-grey-Black, #1c1c1c);
+            }
+          }
         }
       }
     }
