--- a/src/css/ContactUs.css
+++ b/src/css/ContactUs.css
@@ -77,15 +77,16 @@
   display: none;
 }
 .contact-us .main {
-  overflow-y: scroll;
   z-index: 1;
   padding: 80px 136px;
   padding-top: 50px;
   padding-bottom: 20px;
+  overflow-y: scroll;
   display: flex;
   justify-content: space-between;
+  height: 708px;
   width: 1434px;
-  height: 848px;
+  margin-bottom: 50px;
 }
 .contact-us .main .left-main {
   flex: 0.55;
