--- a/src/css/ActionNav.css
+++ b/src/css/ActionNav.css
@@ -1,4 +1,7 @@
 .action-navs {
+  position: fixed;
+  z-index: 1000;
+  bottom: 20px;
   display: inline-flex;
   padding: var(--radius-md, 5px);
   align-items: flex-start;
